--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,11 @@
     "node_modules"
   ],
   "compilerOptions": {
+    "noImplicitAny": false,
+    "noEmitOnError": true,
+    "removeComments": false,
+    "sourceMap": true,
+    "target": "es5",
     "outDir": "dist"
   }
 }
